<resources>
    <string name="app_name">KSMA\'s departments</string>
    <string name="title_activity_maps">KSMA\'s departments</string>
    <string name="pathological_physiology">Pathological physiology</string>
    <string name="departments">Find department </string>
    <string name="hybrid">hybrid</string>
    <string name="normal">normal</string>
    <string name="physiology">Physiology</string>
    <string name="cleanButton">Clean</string>
    <string name="top_text_view">KSMA\'s departments</string>
    <string name="mortuary_title">Mortuary</string>
    <string name="obstetrics_and_gynecology1_title">Obstetrics and gynecology #1</string>
    <string name="obstetrics_and_gynecology2_title">Obstetrics and gynecology #2</string>

    <string-array name="departmentsArray">

        <item>Кафедра гистологии, цитологии, эмбриологии</item>
        <item>Кафедра нормальной и топографической анатомии</item>
        <item>Кафедра патологической анатомии</item>
        <item>Кафедра патологической физиологии</item>
        <item>Кафедра судебной медицины и правоведения</item>

        <item>Кафедра базисной и клинической фармакологии</item>
        <item> Кафедра военно - медицинской подготовки и экстремальной медицины</item>
        <item>Кафедра физики, математики, информатики и компьютерных технологий</item>
        <item> Кафедра микробиологии, вирусологии и иммунологии</item>
        <item>Кафедра фундаментальной и клинической физиологии</item>
        <item>Кафедра фундаментальных дисциплин</item>
        <item>Кафедра общественного здоровья и здравоохранения</item>
        <item>Кафедра общей и клинической эпидемиологии</item>
        <item> Кафедра физического воспитания</item>

        <item> Кафедра гигиенических дисциплин</item>
        <item> Кафедра общей гигиены</item>
        <item> Кафедра иностранных и латинского языка</item>
        <item> Кафедра кыргызского и русского языков</item>
        <item>Кафедра клинической реабилитологии и физиотерапии</item>
        <item> Кафедра философии и общественных наук</item>
        <item> Кафедра фармакогнозии и химии лекарственных средств</item>
        <item>Кафедра управления и экономики фармации, технологии лекарственных средств</item>

        <item> Кафедра акушерства и гинекологии №1</item>
        <item> Кафедра акушерства и гинекологии №2</item>
        <item> Кафедра анестезиологии, реанимации и интенсивной терапии</item>
        <item> Кафедра госпитальной терапии, профпатологии с курсом гематологии</item>
        <item> Кафедра госпитальной педиатрии с курсом неонатологии</item>
        <item> Кафедра госпитальной хирургии с курсом оперативной хирургии им. академика М.М. Мамакеева</item>
        <item> Кафедра детских инфекционных болезней</item>
        <item> Кафедра дерматовенерологии</item>
        <item> Кафедра детской хирургии</item>
        <item>Кафедра детской стоматологии</item>
        <item>Кафедра инфекционных болезней</item>
        <item>Кафедра лучевой диагностики и терапии</item>
        <item> Кафедра неврологии с курсом медицинской генетики</item>
        <item>Кафедра нейрохирургии до дипломного и последипломного образования</item>
        <item>Кафедра онкологии</item>
        <item> Кафедра оториноларингологии</item>
        <item> Кафедра офтальмологии</item>
        <item>Кафедра ортопедической стоматологии</item>
        <item>Кафедра пропедевтики внутренних болезней с курсом эндокринологии</item>
        <item>Кафедра пропедевтики детских болезней</item>
        <item> Кафедра пропедхирургии</item>
        <item>Кафедра психиатрии, психотерапии и наркологии</item>
        <item> Кафедра сестринского дела</item>
        <item> Кафедра терапии общей практики с курсом семейной медицины</item>
        <item> Кафедра травматологии, ортопедии и экстремальной хирургии</item>
        <item>Кафедра терапевтической стоматологии</item>
        <item> Кафедра урологии и андрологии до- и последипломного обучения</item>
        <item>Кафедра факультетской терапии (НЦКиТ)</item>
        <item>Кафедра факультетской педиатрии</item>
        <item>Кафедра факультетской хирургии</item>
        <item> Кафедра фтизиатрии</item>
        <item>Кафедра хирургии общей практики с курсом комбустиологии</item>
        <item>Кафедра хирургической стоматологии и челюстно - лицевой хирургии</item>

    </string-array>
    <string name="main_corp">Main thing</string>
    <string name="fourth_corpus">Fourth corpus</string>
    <string name="departments_list">Department\'s list</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="mistake_button">Report mistake</string>

    <string name="maps_api_debug_key" translatable="false">AIzaSyAgawZF0PfNeBu1JahJtaTpkW9h6qMzijs</string>
    <string name="maps_api_release_key" translatable="false">AIzaSyBuyQitM1K97_wI1H1-KJEOUxgecwsXjqk</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!--Have to match-->
    <string-array name="tab_titles">
        <item>Кафедры</item>
        <item>Книги</item>
    </string-array>
    <string name="tab_title_departments">Кафедры</string>
    <string name="tab_title_books">Книги</string>
    <!--================-->

    <string name="map_type">Map type</string>
    <string name="account">Аккаунт</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="you_are_signed_out">Вы вышли из аккаунта</string>
    <string name="you_are_signed_in">Вы вошли в аккаунт</string>
    <string name="save">Сохранить</string>
    <string name="user_name">Имя</string>
    <string name="faculty">Факультет</string>
    <string name="year">Курс</string>
    <string name="group_number">Номер группы</string>
    <string name="something_is_wrong">Something is wrong</string>
    <string-array name="faculties">
        <item>Лечебное дело</item>
        <item>Педиатрия</item>
        <item>Стоматология</item>
        <item>Фармация</item>
        <item>МПД</item>
        <item>Сестринское дело"</item>
    </string-array>


</resources>
