<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/first_tab_item"
            android:title="@string/tab_title_departments" />
        <item
            android:id="@+id/second_tab_item"
            android:title="@string/tab_title_books" />

    </group>

    <item android:title="@string/account">
        <menu>
            <group>
                <item android:id="@+id/account_item"
                    android:title="" />
            </group>
        </menu>
    </item>

    <item android:title="@string/map_type">
        <menu>
            <group>
                <item android:id="@+id/map_type_switch_menu_item"
                    app:actionLayout="@layout/action_view_switch"
                    android:title="@string/map_type_hybrid" />
            </group>
        </menu>
    </item>
</menu>